<resources>
    <string name="app_name">Care4Health</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="user_name">User Name</string>
    <string name="email">user@host.com</string>
    <string name="help_and_feedback">Help &amp; Feedback</string>
    <string name="about_Care4Health">About Care4Health</string>
    <string name="knew_more">Knew More</string>
    <string name="medication_reminder">Medication Reminders</string>
    <string name="get_medicine_details">Get Medicine Details</string>
    <string name="get_personalized_symptoms">Get Personalized Symptoms</string>
    <string name="join_support_community">Join Support Community</string>
    <string name="connect_with_family">Connect With Family </string>
    <string name="Choose_prescription">Choose a Prescription</string>

    <string name="physician">Physician</string>
    <string name="Upload_Prescription">Upload Prescription</string>
    <string name="cardiology">Cardiology</string>

    <string name="Ophthalmology">Ophthalmology</string>

    <string name="Paediatrics">Paediatrics</string>

    <string name="Gynaecology">Gynaecology</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
